--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "numerous-node",
   "version": "0.1.0",
   "dependencies": {
+    "async": "^0.9.0",
     "request": "*"
   },
   "description": "Numerous Node Library",
   "main": "numerous.js",
   "keywords": [
-    "Numerous", "node", "nodejs"
+    "Numerous",
+    "node",
+    "nodejs"
   ],
   "author": "colinloretz <https://github.com/colinloretz>",
   "license": "MIT"
