--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "async": "^0.9.0",
-    "request": "*"
+    "request": "^2.64.0"
   },
   "description": "Numerous Node Library",
   "main": "numerous.js",
